--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 									<div class="image"><img src="images/about.jpg" alt="" /></div>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>My name is Favour Olotu and I am a software engineering graduate from Carleton University. I am a Hardworking and highly motivated individual, Well versed in multiple programming paradigms, equipped with an analytical mind.
+										<p>My name is Favour Olotu and I am a software engineering graduate from Carleton University. I am a hardworking and highly motivated individual, well versed in multiple programming paradigms, equipped with an analytical mind.
 											I enjoy working with technology and solving complex problems.</p>
 											
 											<ul class="actions">
@@ -135,7 +135,7 @@
 								</li>
 								<li class="icon solid fa-phone">(613) 325-4802</li>
 								<li class="icon solid fa-envelope"><a href="folotu99@gmail.com">folotu99@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/favour-olotu-6838931b9">linkedin.com/in/favour-olotu</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/favour-olotu-6838931b9">linkedin.com/favour-olotu</a></li>
 							</ul>
 						</div>
 					</section>
