--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
 											<p>Skills: Cybersecurity - Information Security - Ethics in Cybersecurity - NIST CSF</p>
 											<a href="https://www.coursera.org/account/accomplishments/certificate/UVLEBEVK4U8Q" class="special">Learn more</a>
 										</article>
+
+										<article>
+											<a href="https://www.coursera.org/account/accomplishments/certificate/6HJL7JNF4TMB" class="image"><img src="images/gc.png" alt="" /></a>
+											<h3 class="major">Foundations of Cybersecurity</h3>
+											<p>Skills: Cybersecurity - Security Playbooks - Security Frameworks - SIEM Tools</p>
+											<a href="https://www.coursera.org/account/accomplishments/certificate/6HJL7JNF4TMB" class="special">Learn more</a>
+										</article>
 									</section>
 									
 								</div>
