--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
 									<section class="features">
 										<article>
 											<a href="https://www.coursera.org/account/accomplishments/records/KBFCTU2U64DL" class="image"><img src="images/gc.png" alt="" /></a>
-											<h3 class="major">Foundations of Cybersecurity</h3>
+											<h3 class="major">Networks and Network Security</h3>
 											<p>Content: Structure of a Network - Network Operations - Network Attacks - Security Hardening</p>
 											<a href="https://www.coursera.org/account/accomplishments/records/KBFCTU2U64DL" class="special">Learn more</a>
 										</article>
 										
 										<article>
 											<a href="https://www.coursera.org/account/accomplishments/certificate/6HJL7JNF4TMB" class="image"><img src="images/gc.png" alt="" /></a>
-											<h3 class="major">Foundations of Cybersecurity</h3>
+											<h3 class="major">Manage Security Risks</h3>
 											<p>Content: Cybersecurity - Security Playbooks - Security Frameworks - SIEM Tools</p>
 											<a href="https://www.coursera.org/account/accomplishments/certificate/6HJL7JNF4TMB" class="special">Learn more</a>
 										</article>
