--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
 								<div class="inner">
 									<h2 class="major">Certifications</h2>
 									<section class="features">
+
+										<article>
+											<a href="https://www.coursera.org/account/accomplishments/records/4JUHW88WPWSU" class="image"><img src="images/gc.png" alt="" /></a>
+											<h3 class="major">Tools of the Trade: Linux and SQL</h3>
+											<p>Content: Linux - SQL</p>
+											<a href="https://www.coursera.org/account/accomplishments/records/4JUHW88WPWSU" class="special">Learn more</a>
+										</article>
+
 										<article>
 											<a href="https://www.coursera.org/account/accomplishments/records/KBFCTU2U64DL" class="image"><img src="images/gc.png" alt="" /></a>
 											<h3 class="major">Networks and Network Security</h3>
