--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 									<section class="features">
 
 										<article>
+											<a href="https://www.coursera.org/account/accomplishments/certificate/RWQ4VYCD4PAS" class="image"><img src="images/gc.png" alt="" /></a>
+											<h3 class="major">Assets, Threats and  Vulnerabilities</h3>
+											<p>Content: Threat Analysis - Asset Classification -  Cryptography - Vulnerability Assessment - Authentication</p>
+											<a href="https://www.coursera.org/account/accomplishments/certificate/RWQ4VYCD4PAS" class="special">Learn more</a>
+										</article>
+										
+										<article>
 											<a href="https://www.coursera.org/account/accomplishments/records/4JUHW88WPWSU" class="image"><img src="images/gc.png" alt="" /></a>
 											<h3 class="major">Tools of the Trade: Linux and SQL</h3>
 											<p>Content: Linux - SQL</p>
