--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 									<section class="features">
 
 										<article>
+											<a href="https://www.coursera.org/account/accomplishments/records/WGKDE8HB3CPU" class="image"><img src="images/gc.png" alt="" /></a>
+											<h3 class="major">Detection and Response</h3>
+											<p>Content: Security Information and Event Management (SIEM) tools - Packet Analyzer -  Intrusion Detection Systems (IDS)</p>
+											<a href="https://www.coursera.org/account/accomplishments/records/WGKDE8HB3CPU" class="special">Learn more</a>
+										</article>
+
+										<article>
 											<a href="https://www.coursera.org/account/accomplishments/certificate/RWQ4VYCD4PAS" class="image"><img src="images/gc.png" alt="" /></a>
 											<h3 class="major">Assets, Threats and  Vulnerabilities</h3>
 											<p>Content: Threat Analysis - Asset Classification -  Cryptography - Vulnerability Assessment - Authentication</p>
