--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 									<section class="features">
 
 										<article>
+											<a href="https://www.coursera.org/account/accomplishments/records/K8EGLMG46YDT" class="image"><img src="images/gc.png" alt="" /></a>
+											<h3 class="major">Automate Cybersecurity Tasks with Python</h3>
+											<p>Content: Python Programming	- PEP 8 style guide</p>
+											<a href="https://www.coursera.org/account/accomplishments/records/K8EGLMG46YDT" class="special">Learn more</a>
+										</article>
+
+										<article>
 											<a href="https://www.coursera.org/account/accomplishments/records/WGKDE8HB3CPU" class="image"><img src="images/gc.png" alt="" /></a>
 											<h3 class="major">Detection and Response</h3>
 											<p>Content: Security Information and Event Management (SIEM) tools - Packet Analyzer -  Intrusion Detection Systems (IDS)</p>
